refactor(dev): 로컬 개발 환경 독립 실행 가능하도록 정비
- Spring AI 의존성 주석 처리 및 OpenAiAutoConfiguration 제외
  BaseAIService를 Spring AI 없이 동작하는 Mock 구현으로 교체
- DevSecurityConfig에서 OAuth2 의존성 제거
  X-User-Id 헤더로 사용자를 식별하는 DevAuthFilter 추가
- 미사용 중복 파일 feed/domain/FeedType.java 삭제
  (feed/domain/enums/FeedType.java 가 실제 사용 중)
- 로컬 실행 설정 및 변경 내역 README 상단에 정리

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>